--- a/movie-list/src/index.scss
+++ b/movie-list/src/index.scss
@@ -1,5 +1,12 @@
+@import "./pages/Home/index.scss";
+@import "./pages/MovieDetail/index.scss";
+@import "./components/Header/index.scss";
+@import "./components/MovieCard/index.scss";
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@400;700&display=swap');
 *{
-    display: flex;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
